--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -54,11 +54,14 @@
   border: 0;
   position: absolute;
   bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .cartBtn:hover {
   background: orange;
 }
 .productInfo {
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 8px;
+  margin-right: 8px;
 }
