--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -6,5 +6,6 @@
 .productsContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 40px;
+  row-gap: 40px;
+  margin: 50px;
 }
