--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -15,7 +15,7 @@
   margin-top: 8px;
 }
 .productName {
-  font-family: "Lato";
+  /* font-family: "Lato"; */
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
@@ -24,7 +24,7 @@
   margin-top: 11px;
 }
 .productPrice {
-  font-family: "Lato";
+  /* font-family: "Lato"; */
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -32,7 +32,7 @@
 }
 .productSeller {
   margin-bottom: 0px;
-  font-family: "Lato";
+  /* font-family: "Lato"; */
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -40,7 +40,7 @@
 .productRatings {
   margin-top: 11px;
   margin-bottom: 0px;
-  font-family: "Lato";
+  /* font-family: "Lato"; */
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -58,8 +58,14 @@
   align-items: center;
   justify-content: center;
 }
+.cartBtn p {
+  font-size: 14px;
+  /* font-weight: 500; */
+}
+
 .cartBtn:hover {
   background: orange;
+  color: white;
 }
 .productInfo {
   margin-left: 8px;
